# OMPEval

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  benchmark.cpp  test.cpp
libraries/: CMakeLists.txt
libraries/omp/: CMakeLists.txt
libraries/omp/src/: EquityCalculator.cpp  EquityCalculator.h  Wrapper.cpp  Wrapper.h
omp/src/: CardRange.cpp  CardRange.h
wrapper/: CMakeLists.txt  OMPEvalWrapper.cpp  OMPEvalWrapper.h
